--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,7 @@
-*{ padding: 0; margin: 0; }
+* {
+    padding: 0;
+    margin: 0;
+}
 
 body {
     background-color: #222222;
@@ -28,6 +31,7 @@ body {
 .sidebar a:hover {
     color: #f1f1f1;
 }
+
 #window {
     position: absolute;
     width: 780px;
@@ -37,6 +41,16 @@ body {
     right: 0;
     bottom: 0;
     left: 0;
+}
+
+@media screen and (max-height: 450px) {
+    .sidebar {
+        padding-top: 15px;
+    }
+
+    .sidebar a {
+        font-size: 18px;
+    }
 }
 
 #window .cell {
@@ -49,20 +63,19 @@ body {
 
     background-color: #231F20;
 
-
 }
 
 #window .cell.parent {
     border: 1px solid #dadada;
-    border-radius:7px;
-    box-shadow:0 0 10px #9ecaed;
+    border-radius: 7px;
+    box-shadow: 0 0 10px #9ecaed;
 }
 
 #window .cell:hover {
 
     background-color: #414042;
     /*background-color: #F2F8FD;*/
-    box-shadow:0 0 3px #9ecaed;
+    box-shadow: 0 0 3px #9ecaed;
     cursor: pointer;
 }
 
