--- a/style/style.css
+++ b/style/style.css
@@ -43,13 +43,36 @@ body {
     left: 0;
 }
 
-@media screen and (max-height: 450px) {
+/*@media screen and (max-height: 450px) {*/
+/*.sidebar {*/
+/*padding-top: 15px;*/
+/*}*/
+
+/*.sidebar a {*/
+/*font-size: 18px;*/
+/*}*/
+/*}*/
+
+@media screen and (max-width: 700px) {
     .sidebar {
-        padding-top: 15px;
+        width: 100%;
+        height: auto;
+        position: relative;
     }
 
     .sidebar a {
-        font-size: 18px;
+        float: left;
+    }
+
+    div.content {
+        margin-left: 0;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .sidebar a {
+        text-align: center;
+        float: none;
     }
 }
 
