--- a/style/style.css
+++ b/style/style.css
@@ -8,29 +8,29 @@ body {
     font-family: "Lato", sans-serif;
 }
 
-.sidebar {
-    height: 100%;
-    width: 160px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #111;
-    overflow-x: hidden;
-    padding-top: 16px;
-}
+/*.sidebar {*/
+    /*height: 100%;*/
+    /*width: 160px;*/
+    /*position: fixed;*/
+    /*z-index: 1;*/
+    /*top: 0;*/
+    /*left: 0;*/
+    /*background-color: #111;*/
+    /*overflow-x: hidden;*/
+    /*padding-top: 16px;*/
+/*}*/
 
-.sidebar a {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 20px;
-    color: #818181;
-    display: block;
-}
+/*.sidebar a {*/
+    /*padding: 6px 8px 6px 16px;*/
+    /*text-decoration: none;*/
+    /*font-size: 20px;*/
+    /*color: #818181;*/
+    /*display: block;*/
+/*}*/
 
-.sidebar a:hover {
-    color: #f1f1f1;
-}
+/*.sidebar a:hover {*/
+    /*color: #f1f1f1;*/
+/*}*/
 
 #window {
     position: absolute;
