--- a/style/style.css
+++ b/style/style.css
@@ -9,16 +9,14 @@ body {
 }
 
 #window {
-    position: relative;
-    width: 780px;
-    height: 470px;
-    /*width:  50%;*/
-    /*height: 50%;*/
+    position: absolute;
+    width:  100%;
+    height: 100%;
     margin: auto;
     top: 0;
     right: 0;
     bottom: 0;
-    left: 20px;
+    left: 0;
     /*display: flex;*/
     /*flex-direction: row;*/
     /*flex-flow: wrap;*/
@@ -36,39 +34,35 @@ body {
 
 }
 
-@media screen and (max-width: 1250px) {
+/*@media screen and (max-width: 1250px) {*/
     /*#window{*/
         /*width: 40%;*/
         /*!*margin-left: 50px;*!*/
     /*}*/
-}
+/*}*/
 
-@media screen and (max-width: 750px) {
-    #window{
+/*@media screen and (max-width: 750px) {*/
+    /*#window{*/
 
-        /*width: 40%;*/
-        padding: 20px;
-        margin:  auto;
+        /*!*width: 40%;*!*/
+        /*padding: 20px;*/
+        /*margin:  auto;*/
 
-    }
-
-
-    #window .cell {
-
-        /*float: none;*/
-        /*width: 90%;*/
-        /*margin: 40px auto;*/
-        /*display: flex;*/
-        /*flex-flow: row;*/
-    }
-
-}
+    /*}*/
 
 
-#myNav{
-    width: 100%;
+    /*#window .cell {*/
 
-}
+        /*!*float: none;*!*/
+        /*!*width: 90%;*!*/
+        /*!*margin: 40px auto;*!*/
+        /*!*display: flex;*!*/
+        /*!*flex-flow: row;*!*/
+    /*}*/
+
+/*}*/
+
+
 
 #window .cell.parent {
     border: 1px solid #dadada;
