--- a/style/sideBarStyle.css
+++ b/style/sideBarStyle.css
@@ -152,10 +152,11 @@ html { height: 100%;}
     height: 20%;
     font-size: 2.2em;
     line-height: 20%;
+    margin-top: 20px;
 }
 
 .sidebar-nav .sidebar-child {
-    font-size: 1.6em;
+    font-size: 1.8em;
 
 }
 .sidebar-nav .dropdown-menu {
