--- a/style/sideBarStyle.css
+++ b/style/sideBarStyle.css
@@ -1,6 +1,7 @@
 body {
     position: relative;
     overflow-x: hidden;
+    box-sizing: border-box;
 }
 body,
 html { height: 100%;}
@@ -150,13 +151,13 @@ html { height: 100%;}
 
 .sidebar-nav > .sidebar-brand {
     height: 20%;
-    font-size: 2.2em;
+    font-size: 2em;
     line-height: 20%;
     margin-top: 20px;
 }
 
 .sidebar-nav .sidebar-child {
-    font-size: 1.8em;
+    font-size: 1.3em;
 
 }
 .sidebar-nav .dropdown-menu {
