-complete About page -complete Readme.md

--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,8 @@
 body {
     background-color: #222222;
+    font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif;
+    color:darkgray;
+}
+h2{
+    color:dimgray;
 }
