--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,14 @@
 body {
     background-color: #222222;
-    font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif;
-    color:darkgray;
+
 }
-h2{
-    color:dimgray;
+
+.about-body {
+
+    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+    color: darkgray;
+}
+
+.about-body h2 {
+    color: dimgray;
 }
